<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".editprofileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout_editprofile"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/profile_toolbar"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/white"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="30dp"
                   android:src="@drawable/close"
                   android:layout_centerVertical="true"
                   android:layout_alignParentStart="true"
                   />

                <ImageView
                    android:id="@+id/save_info"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:src="@drawable/save_edited_info" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_layout_editprofile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        tools:ignore="MissingClass" />
    <TextView
        android:id="@+id/changeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_photo"
        android:layout_below="@+id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/changeProfile"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/fullname"
            android:hint="@string/username"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/Website"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/username"
            android:hint="@string/website"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/Website"
            android:hint="@string/bio"
            android:layout_marginTop="15dp"
            />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="#acacac"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:layout_below="@+id/logoutButton"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#acacac"
            android:textColor="@color/black"
            />

    </RelativeLayout>
</ScrollView>
</RelativeLayout>