<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ui"
    android:padding="10dp"
    tools:context=".loginActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toTopOf="@id/fname"
        android:layout_marginBottom="40dp"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="FUll name.."
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:background="@color/white"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/user_name"
        app:layout_constraintTop_toBottomOf="@id/fname"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Email.."
        app:layout_constraintTop_toBottomOf="@id/uname"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/registerEmail"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/registerpassword"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/alreadyAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FD5602"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        tools:layout_editor_absoluteX="10dp"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>