<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"
    tools:ignore = "HardcodedText">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="6dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/options" />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout_profile">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/mutable_image"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/profile"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/post"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginLeft="7dp"
                            >

                            <TextView
                                android:id="@+id/count_follow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>




                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginLeft="7dp"
                            >
                            <TextView
                                android:id="@+id/following_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>
                    </LinearLayout>
                    <Button
                        android:id="@+id/edit_profile_button"
                        android:layout_width="172dp"
                        android:layout_height="39dp"
                        android:text="edit profile"
                        android:backgroundTint="@color/white"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/postimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Post"
                    android:textSize="13sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/biooo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_margin="8dp"
                >
                <ImageButton
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/grid"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    />
                <ImageButton
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/save_large_icon"
                    android:backgroundTint="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    />

                
            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</RelativeLayout>